@@ -1,3 +1,7 @@
+Thu Jun  4 18:12:14 MEST 1998 Sven Neumann <sven@gimp.org>
+
+	* updated screenshot plug-in
+
 Tue Jun  2 16:15:51 PDT 1998 Manish Singh <yosh@gimp.org>
 
 	* Makefile.am: install gtkrc.forest2 in $prefix/share/gimp
